--- a/app/src/main/res/drawable/bg_vanchuyen.xml
+++ b/app/src/main/res/drawable/bg_vanchuyen.xml
@@ -3,4 +3,5 @@
     <solid android:color="@android:color/transparent"/>
     <stroke android:width="1dp"
         android:color="#00a5ff"/>
+    <corners android:radius="6dp" />
 </shape>
