--- a/app/src/main/res/layout/activity_chitiet_ttdonhang.xml
+++ b/app/src/main/res/layout/activity_chitiet_ttdonhang.xml
@@ -25,14 +25,14 @@
             android:textStyle="bold" />
     </androidx.appcompat.widget.Toolbar>
 
-    <View
-        android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:background="@color/colorPrimaryDark"
-        app:layout_constraintTop_toBottomOf="@+id/toolbarTTDH" />
+<!--    <View-->
+<!--        android:id="@+id/view"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="2dp"-->
+<!--        android:layout_marginLeft="15dp"-->
+<!--        android:layout_marginRight="15dp"-->
+<!--        android:background="@color/colorPrimaryDark"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/toolbarTTDH" />-->
 
     <TextView
         android:id="@+id/textView"
@@ -45,7 +45,7 @@
         android:textAllCaps="true"
         android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbarTTDH" />
 
     <TextView
         android:id="@+id/textView2"
@@ -61,7 +61,7 @@
         android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/view" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbarTTDH" />
 
     <TextView
         android:id="@+id/textView3"
@@ -79,11 +79,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="199dp"
-        android:layout_marginLeft="180dp"
         android:layout_marginEnd="88dp"
-        android:layout_marginRight="88dp"
-
         android:text="#6024"
+        android:layout_marginRight="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView3"
@@ -96,7 +94,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="14dp"
         android:layout_marginRight="15dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="#00a5ff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
@@ -215,7 +213,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="#00a5ff"
         app:layout_constraintBottom_toTopOf="@+id/view_order_confirmed"
         app:layout_constraintEnd_toEndOf="@+id/view_order_placed"
         app:layout_constraintStart_toStartOf="@+id/view_order_placed"
@@ -281,7 +279,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="#00a5ff"
         app:layout_constraintBottom_toTopOf="@+id/view_order_processed"
         app:layout_constraintEnd_toEndOf="@+id/view_order_confirmed"
         app:layout_constraintStart_toStartOf="@+id/view_order_confirmed"
@@ -351,7 +349,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
         android:alpha="0.5"
-        android:background="@color/colorPrimaryDark"
+        android:background="#00a5ff"
         app:layout_constraintBottom_toTopOf="@+id/view_order_pickup"
         app:layout_constraintEnd_toEndOf="@+id/view_order_processed"
         app:layout_constraintStart_toStartOf="@+id/view_order_processed"
