--- a/app/src/main/res/layout/activity_chitietsp.xml
+++ b/app/src/main/res/layout/activity_chitietsp.xml
@@ -79,7 +79,7 @@
 
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="170dp">
+                android:layout_height="190dp">
 
                 <TextView
                     android:id="@+id/txtChitietProduct"
@@ -108,14 +108,13 @@
                     />
                 <TextView
                     android:id="@+id/txtSoluongChitietsp"
-                    android:background="@drawable/button_product"
-                    android:focusable="false"
+                    android:background="@drawable/bg_itemcard"
                     android:text="1"
                     android:layout_marginLeft="10dp"
                     android:textSize="16dp"
                     android:textStyle="bold"
                     android:gravity="center"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:layout_marginTop="5dp"
                     android:layout_width="30dp"
                     android:layout_height="30dp"/>
@@ -129,40 +128,46 @@
                     android:layout_marginTop="5dp"
                     android:src="@drawable/plus"/>
             </LinearLayout>
-        <LinearLayout
-            android:layout_gravity="left"
-            android:orientation="horizontal"
-            android:layout_marginTop="20dp"
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="50dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="20dp"
-                android:background="@drawable/chitietspsize"
-                android:text="64GB"
-                android:textColor="#000000"
-                android:gravity="center"/>
-            <TextView
-                android:layout_width="50dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="10dp"
-                android:background="@drawable/chitietspsize"
-                android:text="128GB"
-                android:textColor="#000000"
-                android:gravity="center"/>
-            <TextView
-                android:layout_width="50dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="10dp"
-                android:background="@drawable/chitietspsize"
-                android:text="256GB"
-                android:textColor="#000000"
-                android:gravity="center"/>
-        </LinearLayout>
-          <RelativeLayout
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="bottom"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="50dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="20dp"
+                    android:background="@drawable/chitietspsize"
+                    android:gravity="center"
+                    android:text="64GB"
+                    android:textColor="#000000" />
+
+                <TextView
+                    android:layout_width="50dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/chitietspsize"
+                    android:gravity="center"
+                    android:text="128GB"
+                    android:textColor="#000000" />
+
+                <TextView
+                    android:layout_width="50dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/chitietspsize"
+                    android:gravity="center"
+                    android:text="256GB"
+                    android:textColor="#000000" />
+            </LinearLayout>
+
             <Button
                 android:id="@+id/btnaddcardProduct"
                 android:textColor="#FFF"
