--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,41 +64,106 @@
                             android:textSize="23dp"
                             android:textStyle="bold" />
 
-                        <EditText
-                            android:id="@+id/edtEmailLo"
-                            style="@style/modifiedEditText"
-                            android:layout_marginTop="20dp"
-                            android:hint="Email"
-                            android:inputType="textEmailAddress"
-                            android:maxLines="1" />
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:weightSum="10">
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginTop="20dp"
+                            android:layout_marginRight="5dp"
+                            app:cardBackgroundColor="#F7F7F7"
+                            app:cardCornerRadius="24dp"
+                            app:cardElevation="0dp">
+
+                            <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/edtEmailLo"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="12dp"
+                                android:layout_marginRight="12dp"
+                                android:background="@android:color/transparent"
+                                android:drawableStart="@drawable/ic_person"
+                                android:drawableLeft="@drawable/ic_person"
+                                android:drawablePadding="12dp"
+                                android:hint="Email"
+                                android:imeOptions="actionNext"
+                                android:inputType="textEmailAddress"
+                                android:minWidth="320dp"
+                                android:minHeight="50dp"
+                                android:singleLine="true" />
+
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginTop="15dp"
+                            android:layout_marginRight="5dp"
+                            app:cardBackgroundColor="#F7F7F7"
+                            app:cardCornerRadius="24dp"
+                            app:cardElevation="0dp">
+
 
                             <EditText
                                 android:id="@+id/edtPassLo"
-                                style="@style/modifiedEditText"
-                                android:layout_weight="7"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="12dp"
+                                android:layout_marginRight="12dp"
+                                android:background="@android:color/transparent"
+                                android:drawableStart="@drawable/ic_lock"
+                                android:drawableLeft="@drawable/ic_lock"
+                                android:drawablePadding="12dp"
                                 android:hint="Mật khẩu"
-                                android:inputType="textPassword" />
+                                android:imeOptions="actionDone"
+                                android:inputType="textPassword"
+                                android:minWidth="320dp"
+                                android:minHeight="50dp" />
 
-                            <ImageView
-                                android:id="@+id/imgeyelo"
-                                android:layout_width="40dp"
-                                android:layout_height="30dp"
-                                android:layout_gravity="bottom"
-                                android:layout_weight="3"
-                                android:onClick="ShowHidePass"
-                                android:src="@drawable/showeye" />
-                        </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+
+                        <!--                        <EditText-->
+                        <!--                            android:id="@+id/edtEmailLo"-->
+                        <!--                            style="@style/modifiedEditText"-->
+                        <!--                            android:layout_marginTop="20dp"-->
+                        <!--                            android:hint="Email"-->
+                        <!--                            android:inputType="textEmailAddress"-->
+                        <!--                            android:maxLines="1" />-->
+
+                        <!--                        <LinearLayout-->
+                        <!--                            android:layout_width="match_parent"-->
+                        <!--                            android:layout_height="wrap_content"-->
+                        <!--                            android:orientation="horizontal"-->
+                        <!--                            android:weightSum="10">-->
+
+                        <!--                            <EditText-->
+                        <!--                                android:id="@+id/edtPassLo"-->
+                        <!--                                style="@style/modifiedEditText"-->
+                        <!--                                android:layout_weight="7"-->
+                        <!--                                android:hint="Mật khẩu"-->
+                        <!--                                android:inputType="textPassword" />-->
+
+                        <!--                            <ImageView-->
+                        <!--                                android:id="@+id/imgeyelo"-->
+                        <!--                                android:layout_width="40dp"-->
+                        <!--                                android:layout_height="30dp"-->
+                        <!--                                android:layout_gravity="bottom"-->
+                        <!--                                android:layout_weight="3"-->
+                        <!--                                android:onClick="ShowHidePass"-->
+                        <!--                                android:src="@drawable/showeye" />-->
+                        <!--                        </LinearLayout>-->
 
                         <CheckBox
                             android:id="@+id/checkbox_login"
                             android:layout_width="wrap_content"
                             android:layout_height="30dp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginTop="10dp"
+                            android:buttonTint="#00a5ff"
                             android:text="Lưu tài khoản?"
                             android:textColor="@color/primaryTextColor"
                             android:textSize="15dp" />
@@ -201,7 +266,7 @@
                 android:layout_marginTop="100dp"
                 android:background="@drawable/round_background"
                 android:padding="15dp"
-                android:src="@drawable/store"/>
+                android:src="@drawable/store" />
 
             <TextView
                 android:id="@+id/phonestore"
