--- a/app/src/main/res/layout/fragment_card.xml
+++ b/app/src/main/res/layout/fragment_card.xml
@@ -96,16 +96,17 @@
         android:orientation="vertical">
 
         <CheckBox
-            android:checked="false"
             android:id="@+id/iv_tick_tk"
             android:layout_width="20dp"
             android:layout_height="20dp"
+            android:buttonTint="#00a5ff"
             android:layout_alignParentRight="true"
             android:layout_marginStart="70dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
-            android:layout_toRightOf="@+id/tv_tk" />
+            android:layout_toRightOf="@+id/tv_tk"
+            android:checked="false" />
 
         <TextView
             android:id="@+id/tv_tk"
@@ -117,13 +118,13 @@
             android:textStyle="bold" />
 
         <TextView
-            android:textColor="#000000"
             android:id="@+id/tv_thoigian_tiepkiem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_tk"
             android:layout_marginLeft="5dp"
-            android:text="Nhận hàng vào 16-20 tháng 12/2021" />
+            android:text="Nhận hàng thời gian lâu, tiết kiệm tiền."
+            android:textColor="#000000" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -145,17 +146,17 @@
         android:orientation="vertical">
 
         <CheckBox
-            android:checked="true"
-            android:layout_alignParentRight="true"
             android:id="@+id/iv_tick_tc"
             android:layout_width="20dp"
             android:layout_height="20dp"
+            android:buttonTint="#00a5ff"
+            android:layout_alignParentRight="true"
             android:layout_marginStart="60dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
             android:layout_toRightOf="@+id/tv_tc"
-            />
+            android:checked="true" />
         <TextView
             android:id="@+id/tv_tc"
             android:textColor="#000000"
@@ -167,12 +168,12 @@
 
         <TextView
             android:id="@+id/tv_thoigian_tieuchuan"
-            android:textColor="#000000"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_tc"
             android:layout_marginLeft="5dp"
-            android:text="Nhận hàng vào 12-17 tháng 12/2021" />
+            android:text="Nhận hàng khoảng từ 3 ngày đến 5 ngày"
+            android:textColor="#000000" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -201,6 +202,7 @@
                 android:layout_weight="8"
                 android:id="@+id/checkbox"
                 android:checked="true"
+                android:buttonTint="#00a5ff"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:layout_margin="10dp"
@@ -244,51 +246,59 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
+        android:layout_height="80dp"
         android:layout_alignParentBottom="true"
-        app:cardCornerRadius="10dp"
-        android:layout_margin="10dp"
-        android:layout_height="80dp">
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        app:cardCornerRadius="10dp">
+
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:orientation="horizontal"
-            android:layout_gravity="center"
-            android:weightSum="10"
-            android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_weight="8"
-            android:layout_width="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center"
-            android:layout_marginLeft="10dp"
-            android:weightSum="10"
-            android:layout_height="wrap_content">
-            <TextView
+            android:weightSum="10">
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Thành tiền:"
-                android:textSize="18dp"
-                android:textColor="#000000"/>
-            <TextView
-                android:id="@+id/txtPriceTongtienCard"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="300.000.000 VND"
-                android:textSize="18dp"
-                android:textColor="#FF0000"/>
-        </LinearLayout>
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="8"
+                android:orientation="vertical"
+                android:weightSum="10">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Thành tiền:"
+                    android:textColor="#000000"
+                    android:textSize="18dp" />
+
+                <TextView
+                    android:id="@+id/txtPriceTongtienCard"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="300.000.000 VND"
+                    android:textColor="#FF0000"
+                    android:textSize="18dp" />
+            </LinearLayout>
+
             <Button
                 android:id="@+id/btnThanhtoanCard"
-               android:layout_weight="2"
                 android:layout_width="130dp"
+                android:layout_height="40dp"
                 android:layout_alignParentBottom="true"
-                android:background="@drawable/login_button_bk"
-                android:layout_margin="10dp"
                 android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:layout_weight="2"
+                android:background="@drawable/login_button_bk"
                 android:text="Thanh toán"
                 android:textAllCaps="false"
                 android:textColor="#ffffff"
-                android:textSize="16dp"
-                android:layout_height="40dp"/>
+                android:textSize="16dp" />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
