--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -13,87 +13,84 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
+            android:id="@+id/lineruser1"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:gravity="center"
+            android:layout_height="160dp"
             android:background="@drawable/gradientbackground"
+            android:gravity="center"
             android:orientation="vertical">
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_centerVertical="true"
-                android:layout_height="20dp"
-                android:layout_marginTop="50dp"
-                android:layout_marginRight="20dp"
-                android:layout_gravity="right"
-                />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:orientation="horizontal">
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/crice_imageuser"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="30dp"
-                android:background="@drawable/useritem"
-                android:src="@drawable/profile" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_gravity="center"
-                android:orientation="vertical">
-            <TextView
-                android:id="@+id/txtNameuser"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="Kien Van Nguyen"
-                android:textColor="#fff"
-                android:textSize="22sp"
-                android:textStyle="bold" />
-            <androidx.cardview.widget.CardView
-                android:layout_width="100dp"
-                app:cardCornerRadius="8dp"
-                android:layout_marginTop="5dp"
-                android:layout_height="20dp" >
-                <TextView
-                    android:textColor="#00a5ff"
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/crice_imageuser"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="30dp"
+                    android:background="@drawable/useritem"
+                    android:src="@drawable/profile" />
+
+                <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="Thành viên"
-                    android:textStyle="bold"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginVertical="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="10dp"
+                    android:orientation="vertical">
 
-                    />
-            </androidx.cardview.widget.CardView>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="Chào mừng,"
+                        android:textColor="#fff"
+                        android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/txtEmailuser"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:baselineAligned="false"
-                android:layout_marginTop="5dp"
-                android:text="nguyenvankien11@gmail.com"
-                android:textColor="#fff"
-                android:textSize="18dp" />
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="100dp"
+                        android:layout_height="20dp"
+                        android:layout_marginTop="5dp"
+                        app:cardCornerRadius="8dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_marginVertical="0dp"
+                            android:layout_marginLeft="5dp"
+                            android:text="Thành viên"
+                            android:textColor="#00a5ff"
+                            android:textStyle="bold"
+
+                            />
+                    </androidx.cardview.widget.CardView>
+
+                    <TextView
+                        android:id="@+id/txtNameuser"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="Kien Van Nguyen"
+                        android:textColor="#fff"
+                        android:textSize="22sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
             </LinearLayout>
+            <!--            <LinearLayout-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="200dp"-->
+            <!--                android:orientation="horizontal"-->
+            <!--                >-->
+            <!--                <ImageView-->
+            <!--                    style="@style/parent"-->
+            <!--                    android:background="@drawable/ic_login_bk"-->
+            <!--                    android:contentDescription="login background" />-->
 
-        </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:orientation="horizontal"
-                >
-                <ImageView
-                    style="@style/parent"
-                    android:background="@drawable/ic_login_bk"
-                    android:contentDescription="login background" />
-
-            </LinearLayout>
+            <!--            </LinearLayout>-->
         </LinearLayout>
         <androidx.cardview.widget.CardView
             android:id="@+id/cardview"
@@ -101,8 +98,9 @@
             android:layout_marginLeft="40dp"
             android:layout_height="120dp"
             app:cardCornerRadius="10dp"
+            android:layout_marginTop="20dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="240dp">
+            android:layout_below="@+id/lineruser1">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -136,13 +134,13 @@
                     android:layout_weight="1"
                     android:layout_height="match_parent">
                     <ImageView
+                        android:id="@+id/img_chatadminuser"
                         android:layout_width="36dp"
                         android:layout_height="36dp"
-                        android:src="@drawable/onlineshopping" />
+                        android:src="@drawable/chatting" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0"
                         android:textStyle="bold"
                         android:textSize="20sp"
                         android:paddingTop="10dp"
@@ -159,7 +157,7 @@
                         android:id="@+id/image_donhangvanchuyen"
                         android:layout_width="36dp"
                         android:layout_height="36dp"
-                        android:src="@drawable/shipped" />
+                        android:src="@drawable/shipped1" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -278,7 +276,7 @@
                 android:layout_marginLeft="25dp"
                 android:layout_marginVertical="0dp"
                 android:layout_marginRight="10dp"
-                android:text="Chỉnh sửa tài khoản" />
+                android:text="Thiết lập tài khoản" />
             </androidx.cardview.widget.CardView>
 <!--            <View-->
 <!--                android:layout_width="match_parent"-->
@@ -300,7 +298,7 @@
                 android:layout_marginRight="10dp"
                 style="@style/viewParent.headerText.settingsTextIcon"
                 android:drawableLeft="@drawable/key"
-                android:text="Thay đổi mật khẩu" />
+                android:text="Thiết lập mật khẩu" />
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
@@ -323,17 +321,16 @@
         </LinearLayout>
         <Button
             android:id="@+id/logout"
-            android:layout_width="match_parent"
+            android:layout_width="190dp"
             android:layout_height="48dp"
             android:layout_gravity="center"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="5dp"
             android:background="@drawable/login_button_bk"
             android:text="Đăng xuất"
             android:textAllCaps="false"
             android:textColor="#ffffff"
+            android:drawableLeft="@drawable/dangxuat"
             android:textSize="16dp" />
 
     </LinearLayout>
