--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -56,11 +56,11 @@
 
                 </LinearLayout>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Android"
-                    android:layout_marginTop="11dp"/>
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="Android"-->
+<!--                    android:layout_marginTop="11dp"/>-->
                 <TextView
                     android:id="@+id/tvPriceItemcard"
                     android:layout_width="wrap_content"
@@ -85,13 +85,16 @@
                             android:id="@+id/imgTruItemcard"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
+                            android:layout_gravity="center"
                             android:src="@drawable/minus"/>
 
                         <TextView
+                            android:background="@drawable/bg_itemcard"
                             android:id="@+id/tvSoLuongItemcard"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:text="1"
+                            android:gravity="center"
                             android:textColor="#000000"
                             android:textSize="16dp"
                             android:textStyle="bold"
@@ -99,6 +102,7 @@
                             android:layout_marginRight="10dp"/>
 
                         <ImageView
+                            android:layout_gravity="center"
                             android:id="@+id/imgCongItemcard"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
