--- a/app/src/main/res/layout/item_sanpham.xml
+++ b/app/src/main/res/layout/item_sanpham.xml
@@ -5,20 +5,29 @@
     android:layout_height="wrap_content"
     >
     <androidx.cardview.widget.CardView
-        android:layout_width="180dp"
+        android:layout_width="190dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         Card_View:cardCornerRadius="10dp"
         Card_View:cardElevation="5dp"
         >
+        <ImageView
+            android:id="@+id/btnlikesp"
+            android:layout_width="17dp"
+            android:layout_height="17dp"
+            android:src="@drawable/like"
+            android:layout_margin="5dp"
+            android:layout_gravity="right"
+            android:layout_weight="1"
+            />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_margin="3dp"
             android:orientation="vertical"
             >
             <ImageView
+                android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
@@ -29,15 +38,17 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="5dp"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/txttenSP"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:gravity="center"
+                    android:layout_height="20dp"
                     android:textSize="16dp"
                     android:textStyle="bold"
                     android:text="IPHONE 12 PRO "
@@ -48,44 +59,53 @@
                     android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
                     android:text="10.000 VND"
                     android:textSize="15dp"
                     android:textColor="#FF0000"
                     />
 
             </LinearLayout>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#888888"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                />
+<!--            <View-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="1dp"-->
+<!--                android:background="#888888"-->
+<!--                android:layout_marginLeft="5dp"-->
+<!--                android:layout_marginRight="5dp"-->
+<!--                />-->
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:background="#00a5ff"
 
-                android:layout_marginTop="10dp"
                 >
-                <ImageView
-                    android:id="@+id/btnCardsp"
-                    android:layout_width="20dp"
+                <TextView
+                    android:layout_width="match_parent"
                     android:layout_height="20dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_toEndOf="@+id/like"
-                    android:src="@drawable/cart1"
-                    android:layout_weight="1"
+                    android:textSize="16dp"
+                    android:text="Thêm giỏ hàng"
+                    android:textColor="#ffffff"
+                    android:gravity="center"
                     />
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/like"
-                    android:layout_alignParentEnd="true"
-                    android:id="@+id/btnlikesp"
-                    android:layout_weight="1"
-                    />
+<!--                <ImageView-->
+<!--                    android:id="@+id/btnCardsp"-->
+<!--                    android:layout_width="20dp"-->
+<!--                    android:layout_height="20dp"-->
+<!--                    android:layout_marginStart="10dp"-->
+<!--                    android:layout_toEndOf="@+id/like"-->
+<!--                    android:src="@drawable/cart1"-->
+<!--                    android:layout_weight="1"-->
+<!--                    />-->
+<!--                <ImageView-->
+<!--                    android:layout_width="20dp"-->
+<!--                    android:layout_height="20dp"-->
+<!--                    android:src="@drawable/like"-->
+<!--                    android:layout_alignParentEnd="true"-->
+<!--                    android:id="@+id/btnlikesp"-->
+<!--                    android:layout_weight="1"-->
+<!--                    />-->
 
             </LinearLayout>
 
